--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
-  max-width: 990px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0;
   overflow: hidden;
@@ -251,6 +251,7 @@
 }
 
 #es-rc #es-rc-content .es-research {
+  background-image: url(./static/img/research_bg.jpg);
   background-size: 0px;
   margin-bottom: 40px;
 }
@@ -480,7 +481,6 @@
 
 #es-rc #es-rc-content .es-cross {
   margin-bottom: 60px;
-  display: none;
 }
 
 #es-rc #es-rc-content .es-cross__title {
@@ -499,21 +499,26 @@
 }
 
 #es-rc #es-rc-content .es-cross__single {
-  width: 190px;
+  width: 220px;
   display: grid;
-  grid-template-rows: 350px 65px 60px 27px;
+  grid-template-rows: 350px 65px 80px 27px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
+#es-rc #es-rc-content .es-cross__single:nth-child(2) {
+  grid-template-rows: 350px 65px 60px 27px;
+}
 #es-rc #es-rc-content .es-cross__single:nth-child(3),
 #es-rc #es-rc-content .es-cross__single:nth-child(4),
 #es-rc #es-rc-content .es-cross__single:nth-child(5) {
-  grid-template-rows: 350px 45px 80px 27px;
+  grid-template-rows: 350px 45px 60px 27px;
 }
 
 #es-rc #es-rc-content .es-cross__single-img {
   background-color: #F5F5F5;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   padding: 30px 10px;
   margin-bottom: 20px;
 }
@@ -547,6 +552,7 @@
   background-color: #4FAA43;
   padding: 5px 45px;
   max-width: 170px;
+  margin: 0 auto;
 }
 
 #es-rc #es-rc-content .es-cross__single-link:hover {
@@ -556,61 +562,43 @@
   border: 2px solid #4FAA43;
 }
 
-#es-rc #es-rc-content .es-cross__mobile {
-  margin-bottom: 30px;
-}
+@media screen and (min-width: 405px) {
+  #es-rc #es-rc-content .es-cross__title {
+    text-align: left;
+  }
 
-#es-rc #es-rc-content .es-swiper {
-  width: auto;
-  height: 550px;
-}
+  #es-rc #es-rc-content .es-cross__single {
+    width: 190px;
+    display: grid;
+    grid-template-rows: 350px 65px 60px 27px;
+    text-align: left;
+    margin-bottom: 0;
+  }
 
-#es-rc #es-rc-content .es-swiper .es-cross__single {
-  margin: 0 auto;
-  width: 250px;
-  text-align: center;
-}
+  #es-rc #es-rc-content .es-cross__single:nth-child(3),
+  #es-rc #es-rc-content .es-cross__single:nth-child(4),
+  #es-rc #es-rc-content .es-cross__single:nth-child(5) {
+    grid-template-rows: 350px 45px 80px 27px;
+  }
 
-#es-rc #es-rc-content .es-swiper .es-cross__single-link {
-  margin: 0 auto;
-}
-
-#es-rc #es-rc-content .swiper-button-prev.es-swiper-button-prev,
-#es-rc #es-rc-content .swiper-button-next.es-swiper-button-next {
-  top: 35%;
-}
-
-#es-rc #es-rc-content .swiper-button-prev.es-swiper-button-prev::after,
-#es-rc #es-rc-content .swiper-button-next.es-swiper-button-next::after {
-  font-size: 35px;
-  font-weight: 900;
-  color: #4FAA43;
-}
-
-
-#es-rc #es-rc-content .es-swiper .swiper-pagination-bullet-active {
-  background: #4FAA43;
-  opacity: 1;
+  #es-rc #es-rc-content .es-cross__single-link {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 990px) {
   #es-rc #es-rc-content .es-cross__wrapper {
     justify-content: space-between;
   }
-
 }
 
-@media screen and (min-width: 576px) {
-  #es-rc #es-rc-content .es-cross {
-    display: block;
+@media screen and (min-width: 1200px) {
+  #es-rc #es-rc-content .es-cross__single {
+    width: 220px;
   }
 
-  #es-rc #es-rc-content .es-cross__mobile {
-    display: none;
-  }
-
-  #es-rc #es-rc-content .es-cross__title {
-    text-align: left;
+  #es-rc #es-rc-content .es-cross__single-img {
+    align-items: flex-end;
   }
 }
 
